server-web-next/feat: add player game account management
